k8s/order-api-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-api
spec:
  selector:
    matchLabels:
      component: orders-api
  template:
    metadata:
      labels:
        component: orders-api
    spec:
      containers:
        - name: orders-api
          image: velotiopallav/orders-api
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: orders-api
spec:
  type: ClusterIP
  selector:
    component : orders-api
  ports:
    - port: 8000
      targetPort: 8000
