k8s/server-db-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-db
spec:
  selector:
    matchLabels:
      component: service-db
  template:
    metadata:
      labels:
        component: service-db
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: server-db
          image: velotiopallav/service-db
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
          volumeMounts:
              - name: postgres-storage
                mountPath: /var/lib/postgresql/data
                subPath: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: service-db
spec:
  type: ClusterIP
  selector:
    component : service-db
  ports:
    - port: 5432
      targetPort: 5432
