k8s/user-api-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
spec:
  selector:
    matchLabels:
      component: users-api
  template:
    metadata:
      labels:
        component: users-api
    spec:
      containers:
        - name: users-api
          image: velotiopallav/users-api
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  type: ClusterIP
  selector:
    component : users-api
  ports:
    - port: 8010
      targetPort: 8010
